# personal_news_wizard

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
common_res/: help_message_en.txt  help_message_ru.txt  system_role.txt  system_role_2.txt  system_role_3.txt  system_role_4.txt  welcome_message_en.txt  welcome_message_ru.txt
localization/: en.json  ru.json
src/: ai_utils.rs  auth.rs  common_utils.rs  main.rs  news_block_creation.rs  news_block_creation_utils.rs  scheduled_task.rs
